# Project-Streaming

./: .env.example  .gitignore  README.md  pyproject.toml
StreamingTV/: README.md  config.xml  index.html  tizen_web_project.yaml
StreamingTV/Debug/: StreamingTV-sha256.wgt  StreamingTV.wgt  StreamingTV.wgt.sha512.bak  tizen-app.wgt
StreamingTV/Debug/projects/StreamingTV/: README.md  config.xml  deploy.ps1  index.html
StreamingTV/Debug/projects/tizen-app/: README.md  config.xml
StreamingTV/deploy-tools/: resign_wgt.py  sdb.spec  sdb_wrapper.py
scripts/: convert.py  rename.py  rename_t1.py  rename_t2.py  rename_t3.py
scripts/series/lioness/: rename_t1.py  rename_t2.py
scripts/series/mr_robot/: convert_single_temp.py  rename_t1.py  rename_t2.py  rename_t3.py  rename_t4.py
scripts/series/the_madison/: rename_t1.py
src/streaming/: config.py  database.py  media.py  server.py  tmdb.py
static/: manifest.json  sw.js  tv-nav.js
templates/: home.html  index.html  movies.html  player.html  profiles.html  season.html  series.html
tests/: test_media.py  teste.py
