[tool.poetry]
name = "streaming"
version = "0.1.0"
description = "Servidor de streaming local para assistir vídeos no navegador da TV"
authors = ["PedroMelo"]
readme = "README.md"
packages = [{include = "streaming", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9"
jinja2 = "^3.1"
python-dotenv = "^1.0"
aiofiles = "^23.2"
aiohttp-jinja2 = "^1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"

[tool.poetry.scripts]
streaming = "streaming.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"